tests/out/error/enum/default_no_int.in.bt
enum Spam {
	field := 'should be integer'
}
