tests/out/error/enum/default_no_int.out
tests/out/error/enum/default_no_int.in.bt:2:2 error: enum field value must be an integer
